<?xml version="1.0"?>
<package>
  <name>uav_state_machine</name>
  <version>0.0.0</version>
  <description>Application that commands the uav using information from the vision system</description>
  <maintainer email="prs@us.es">prs</maintainer>
  <license>BSD</license>
  <author>prs</author>
  <url>http://ros.org/wiki/mbzirc</url>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>grvc_quadrotor_uav</build_depend>
  <build_depend>grvc_quadrotor_utils</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>mavros_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  
  <run_depend>message_runtime</run_depend>
  <run_depend>grvc_quadrotor_uav</run_depend>
  <run_depend>grvc_quadrotor_utils</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>mavros_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>roscpp</run_depend>
</package>
